--- a/sox_record.html
+++ b/sox_record.html
@@ -269,7 +269,7 @@
 </script>
 
 <script type="text/html" data-help-name="sox-record">
-    <p><strong>A simple wrapper node around the record functionality of the sox commandline utility.</strong></p>
-    <p>The node will record audio on the machine node-red runs on from the configured input source. To start recording send a <code>msg.payload</code> of <strong>start</strong> and to stop it a <code>msg.payload</code> of <strong>stop</strong>. It will output the recorded audio as a buffer in the configured format to the first output as a <code>msg.payload</code> and any recording information or debug info in the <code>msg.payload</code> to its second output.</p>
+    <p><strong>A simple wrapper node around the record functionality of the sox commandline utility.</strong><br/></p>
+    <p>The node will record audio on the machine node-red runs on from the configured input source. To start recording send a <code>msg.payload</code> of <strong>start</strong> and to stop it a <code>msg.payload</code> of <strong>stop</strong>. It will output the recorded audio as a buffer in the configured format to the first output as a <code>msg.payload</code> and any recording information or debug info in the <code>msg.payload</code> to its second output.<br/></p>
     <p><i>For detailed usage information please go to <a href="https://github.com/johanneskropf/node-red-contrib-sox-utils">node-red-contrib-sox-utils</a>.</i></p>
 </script>
