--- a/sox_play.html
+++ b/sox_play.html
@@ -36,7 +36,11 @@
         oneditprepare: function() {
             var node = this;
             $.getJSON('soxPlay/devices',function(data) {
-                console.log(data)
+                if (data === "error") {
+                    $("#error-wrapper").hide();
+                    return;
+                }
+                $("#error").hide();
                 data.forEach(device => {
                     $('#node-input-outputDevice').append(`<option value="${device.number}">${device.name}</option>`);
                 });
@@ -47,29 +51,34 @@
 </script>
 
 <script type="text/html" data-template-name="sox-play">
-    <h4>Settings</h4>
-    <div class="form-row">
-        <label for="node-input-outputDevice"></i>output device</label>
-        <select id="node-input-outputDevice">
-            <option value="default">default device</option> 
-        </select>
+    <div id="error">
+        <p>Something went wrong. The node couldnt retrieve any devices. The node only runs on Linux with ALSA. If any errors where logged you will find them in the syslog.</p>
     </div>
-    <div class="form-row">
-        <label for="node-input-gain"><i class="icon-tag"></i>gain in dB</label>
-        <input type="text" id="node-input-gain" value="0" />
-    </div>
-    <div class="form-row">
-        <label for="node-input-startNew"></i>on new input while playing</label>
-        <select id="node-input-startNew">
-            <option value="skip">ignore new input and keep current playback</option>
-            <option value="start">replace current playback with new input</option>
-            <option value="queue">add new input to queue if already playing</option>
-        </select>
-    </div>
-    <div class="form-row">
-        <label for="node-input-debugOutput"></i>debug</label>
-        <input type="checkbox" id="node-input-debugOutput" style="display:inline-block; width: auto; vertical-align:baseline;" value="false">
-        <label for="node-input-debugOutput" style="width: 70%;">detailed debug and playpack info</label>
+    <div id="error-wrapper">
+        <h4>Settings</h4>
+        <div class="form-row">
+            <label for="node-input-outputDevice"></i>output device</label>
+            <select id="node-input-outputDevice">
+                <option value="default">default device</option> 
+            </select>
+        </div>
+        <div class="form-row">
+            <label for="node-input-gain"><i class="icon-tag"></i>gain in dB</label>
+            <input type="text" id="node-input-gain" value="0" />
+        </div>
+        <div class="form-row">
+            <label for="node-input-startNew"></i>on new input while playing</label>
+            <select id="node-input-startNew">
+                <option value="skip">ignore new input and keep current playback</option>
+                <option value="start">replace current playback with new input</option>
+                <option value="queue">add new input to queue if already playing</option>
+            </select>
+        </div>
+        <div class="form-row">
+            <label for="node-input-debugOutput"></i>debug</label>
+            <input type="checkbox" id="node-input-debugOutput" style="display:inline-block; width: auto; vertical-align:baseline;" value="false">
+            <label for="node-input-debugOutput" style="width: 70%;">detailed debug and playpack info</label>
+        </div>
     </div>
     <h4>Name</h4>
     <div class="form-row">
