--- a/sox_play.html
+++ b/sox_play.html
@@ -71,17 +71,7 @@
         <p>Something went wrong. The node couldnt retrieve any devices. The node only runs on Linux with ALSA. If any errors where logged you will find them in the syslog.</p>
     </div>
     <div id="error-wrapper">
-        <h4>Settings</h4>
-        <div class="form-row">
-            <label for="node-input-outputDevice"></i>output device</label>
-            <select id="node-input-outputDevice">
-                <option value="default">default device</option> 
-            </select>
-        </div>
-        <div class="form-row">
-            <label for="node-input-gain"><i class="icon-tag"></i>gain in dB</label>
-            <input type="text" id="node-input-gain" value="0" />
-        </div>
+        <h4>Input Settings</h4>
         <div class="form-row" id="startNewRow">
             <label for="node-input-startNew"></i>on new input while playing</label>
             <select id="node-input-startNew">
@@ -96,7 +86,6 @@
             <label for="node-input-playStream" style="width: 70%;">input is a raw audio stream</label>
         </div>
         <div id="inputFormatWrapper">
-            <h4>Input Settings</h4>
             <div class="form-row">
                 <label for="node-input-inputEncoding"></i>encoding</label>
                 <select id="node-input-inputEncoding">
@@ -118,7 +107,17 @@
                 <input type="number" id="node-input-inputBits" value="16" />
             </div>
         </div>
-        <h4>Output</h4>
+        <h4>Output settings</h4>
+        <div class="form-row">
+            <label for="node-input-outputDevice"></i>output device</label>
+            <select id="node-input-outputDevice">
+                <option value="default">default device</option> 
+            </select>
+        </div>
+        <div class="form-row">
+            <label for="node-input-gain"><i class="icon-tag"></i>gain in dB</label>
+            <input type="text" id="node-input-gain" value="0" />
+        </div>
         <div class="form-row">
             <label for="node-input-debugOutput"></i>debug</label>
             <input type="checkbox" id="node-input-debugOutput" style="display:inline-block; width: auto; vertical-align:baseline;" value="false">
