--- a/sox_play.html
+++ b/sox_play.html
@@ -53,7 +53,7 @@
             
             $.getJSON('soxPlay/devices',function(data) {
                 if (data === "error") {
-                    $("#error-wrapper").hide();
+                    //$("#error-wrapper").hide();
                     return;
                 }
                 $("#error").hide();
@@ -68,7 +68,7 @@
 
 <script type="text/html" data-template-name="sox-play">
     <div id="error">
-        <p>Something went wrong. The node couldnt retrieve any devices. The node only runs on Linux with ALSA. If any errors where logged you will find them in the syslog.</p>
+        <p>Something went wrong. The node couldnt retrieve any devices. The node only runs on Linux with ALSA. If any errors where logged you will find them in the syslog. You can still try to play to the default device.</p>
     </div>
     <div id="error-wrapper">
         <h4>Input Settings</h4>
