--- a/sox_record.html
+++ b/sox_record.html
@@ -142,6 +142,7 @@
                 } else if (value == "manualSource") {
                     $("#manualSourceWrapper").show();
                     $("#inputFormatWrapper").hide();
+                    $("#node-input-buttonStartRow").show();
                 } else {
                     $("#inputFormatWrapper").hide();
                     $("#node-input-buttonStartRow").show();
